grid-column-gap fixed 5px

--- a/src/components/BlogPage/BlogPageCart.css
+++ b/src/components/BlogPage/BlogPageCart.css
@@ -11,9 +11,9 @@
   }
   .Blog-Container{
     display: grid;
-    grid-template-columns: repeat(8, 0.5fr);
-   
-    grid-gap: 0.5px;
+    grid-template-columns: repeat(8, 1fr);
+    grid-column-gap: 5px;
+    grid-row-gap: 5px;
     margin-left: 40px;
     margin-right: 40px;
     margin-top: 2px;
@@ -21,12 +21,14 @@
   }
   .BlogCart{ 
     display: grid;
-    grid-template-columns: repeat(8, 0.5fr);
+    grid-template-columns: repeat(8, 1fr);
+    
     grid-gap: 2px;
     margin-left: 1px;
     margin-right: 1px;
   }
   .Blog-Container > Div {
+    
     cursor: pointer;
     height: 210px;
     background-size: cover;
@@ -34,9 +36,8 @@
      margin: 5px;
     display: flex;
     flex-direction: column;
-   
     background-color: aliceblue;
-  
+
     transition: all 0.5s ease-in;
 
   }
@@ -91,6 +92,8 @@ line-height: 17px;
      text-align: left;
      font-weight: 300;
 font-size:1.5vw;
+
+
 }
 
  
@@ -340,14 +343,14 @@ font-size:1.5vw;
   }
   .Blog-Container > div:nth-of-type(3 ) {
     margin-left: 15px;
-    margin-right: 15px;
+    
     height: 426px;
     grid-column: 1 / 6;
 
   }
   .Blog-Container > div:nth-of-type(4) {
    
-    margin-left: 15px;
+  
     margin-right: 15px;
     height: 426px;
     grid-column: 6 / 9;
@@ -355,14 +358,14 @@ font-size:1.5vw;
   }
   .Blog-Container > div:nth-of-type(5) {
     margin-left: 15px;
-    margin-right: 15px;
+   
     height: 426px;
     grid-column: 1 / 4;
 
   }
   .Blog-Container > div:nth-of-type(6) {
   
-    margin-left: 15px;
+  
     margin-right: 15px;
     height: 426px;
     grid-column: 4 / 9;
@@ -370,7 +373,7 @@ font-size:1.5vw;
   }
   .Blog-Container > div:nth-of-type(7) {
     margin-left: 15px;
-    margin-right: 15px;
+   
     height: 426px;
     grid-column: 1 / 6;
 
@@ -378,7 +381,6 @@ font-size:1.5vw;
   }
   .Blog-Container > div:nth-of-type(8) {
    
-    margin-left: 15px;
     margin-right: 15px;
     height: 426px;
     grid-column: 6 / 9;
